@@ -4,6 +4,11 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2018-06-25
+ * Gave Session a self relationship.
+ * Added an error message if you don't pass in a api url for wing.vue.js delete().
+ * Fixed a bug in error handling in wing.vue.js delete.
+
 2018-06-22
  * libpng should be compiled with Wing because the RPMs found in many places don't contain pngfix.
 
